@@ -1,0 +1,8 @@
+#ifndef _OMXBLAS_H
+#define _OMXBLAS_H
+
+void F77_SUB(omxunsafedgemm)(const char*, const char*, int*, int*,
+	int*, double*, double*, int*, double*, int*, double*,
+	double*, int*);
+
+#endif //_OMXBLAS_H
