@@ -14,6 +14,7 @@ trunk
 * fix memory leak in RAM objective function
 * removed dependency to MBESS library in R documentation
 * added more descriptive error message when thresholds are not sorted
+* checking in a dgemm that does R 2.11.1 unsafe NaN transformations
 
 Release 1.0.0-1448 (September 30, 2010)
 =======================================
